k3s_cluster/base/dmz/media/jellystat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: dmz
  labels:
    app: dmz-media-jellystat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dmz-media-jellystat
  template:
    metadata:
      labels:
        app: dmz-media-jellystat
    spec:
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10

      # Ensure PostgreSQL user (uid 999) can write to PVC
      securityContext:
        fsGroup: 999

      containers:
        # --- Jellystat Main ---
        - name: jellystat
          image: ghcr.io/cyfershepard/jellystat:latest
          ports:
            - containerPort: 3001
              name: web
          volumeMounts:
            - name: media-storage
              mountPath: /app/backend/data
              subPath: jellystat/data

      volumes:
        - name: media-storage
          persistentVolumeClaim:
            claimName: media-pvc
