k3s_cluster/base/dmz/media/jellystat/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: dmz
  labels:
    app: dmz-media-jellystat
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`jellystat.media.dmz.home`)
      middlewares:
        - name: dmz-media-middleware-auth-trauth # authentik
      services:
        - name: dmz-media-jellystat-service
          port: 6666
  #tls: {}
